hphp/hack/test/typecheck/reactive/await_in_pure_comprehensive.php.like_types.exp
File "await_in_pure_comprehensive.php", line 9, characters 45-59:
`async` functions must have an `Awaitable` return type. (Parsing[1002])
File "await_in_pure_comprehensive.php", line 10, characters 10-18:
This value has `Awaitable` type. `Awaitable` typed values in reactive code must be immediately `await`ed. (Typing[4248])
File "await_in_pure_comprehensive.php", line 46, characters 5-28:
This value has `Awaitable` type. `Awaitable` typed values in reactive code must be immediately `await`ed. (Typing[4248])
File "await_in_pure_comprehensive.php", line 46, characters 19-27:
This value has `Awaitable` type. `Awaitable` typed values in reactive code must be immediately `await`ed. (Typing[4248])
File "await_in_pure_comprehensive.php", line 47, characters 5-13:
This value has `Awaitable` type. `Awaitable` typed values in reactive code must be immediately `await`ed. (Typing[4248])
File "await_in_pure_comprehensive.php", line 58, characters 37-45:
This value has `Awaitable` type. `Awaitable` typed values in reactive code must be immediately `await`ed. (Typing[4248])
